2003-04-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	Some simple renames:

	sharedURLCredentialStorage --> sharedCredentialStorage
	URLCredentialWithUser:password:persistence: --> credentialWithUser:password:persistence:

        * Panels.subproj/WebAuthenticationPanel.m:
        (-[WebAuthenticationPanel runAsModalDialogWithChallenge:]):
        (-[WebAuthenticationPanel sheetDidEnd:returnCode:contextInfo:]):

2003-04-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	Changed things to use WebAuthenticationChallenge for
	WebResoureceLoadDelegate auth callbacks.

        * Panels.subproj/WebPanelAuthenticationHandler.m:
        (-[WebPanelAuthenticationHandler startAuthentication:window:]):
        (-[WebPanelAuthenticationHandler _authenticationDoneWithChallenge:result:]):
        * WebKit.exp:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebAuthenticationChallenge.h: Added.
        * WebView.subproj/WebAuthenticationChallenge.m: Added.
        (-[WebAuthenticationChallengeInternal initWithDelegate:]):
        (-[WebAuthenticationChallengeInternal dealloc]):
        (-[WebAuthenticationChallenge _initWithAuthenticationChallenge:delegate:]):
        (-[WebAuthenticationChallenge dealloc]):
        (-[WebAuthenticationChallenge useCredential:]):
        (-[WebAuthenticationChallenge cancel]):
        (-[WebAuthenticationChallenge continueWithoutCredential]):
        * WebView.subproj/WebAuthenticationChallengeInternal.h: Added.
        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate connection:didReceiveAuthenticationChallenge:]):
        (-[WebBaseResourceHandleDelegate connection:didCancelAuthenticationChallenge:]):
        (-[WebBaseResourceHandleDelegate useCredential:forAuthenticationChallenge:]):
        (-[WebBaseResourceHandleDelegate continueWithoutCredentialForAuthenticationChallenge:]):